# yasme

./: .clang-format  CMakeLists.txt  README.md  TODO  docs.md  t
driver/: main.cc
include/yasme/: Diagnostics.hh
include/yasme/asm/: Assembler.hh
include/yasme/fe/: Ast.hh  Parser.hh
include/yasme/ir/: ExprParser.hh  Parser.hh  ParserResult.hh  Yir.hh  yir.hh
include/yasme/lex/: Lexer.hh  Tokens.hh  lexer.hh
include/yasme/macro/: Expander.hh  Pattern.hh  TokenBuffer.hh  TokenList.hh  TokenSlice.hh
include/yasme/support/: Result.hh  SourceManager.hh  Span.hh  ctype.hh
source/: Diagnostics.cc
source/asm/: Assembler.cc
source/fe/: Parser.cc
source/ir/: ExprParser.cc  Parser.cc  Yir.cc  yir.cc
source/lex/: Lexer.cc  lexer.cc
source/macro/: Expander.cc  Pattern.cc  TokenBuffer.cc  TokenSlice.cc
source/support/: SourceManager.cc  Span.cc
stl/: README.md  prelude.asm
stl/arch/EM64T/: core.asm  emit.asm  mov.asm  reg.asm  util.asm
tests/: CMakeLists.txt  InlineTests.cc  PatternTests.cc  RunYasmeCliCases.cmake  TestRunner.cc
tests/cases/: at_on_value_name.asm  builtin_dollar_address.asm  builtin_dollar_address.bytes  builtin_stream_offset.asm  builtin_stream_offset.bytes  cf_break_continue.asm  cf_break_continue_inverse.asm  cf_break_outside_loop.asm  cf_break_outside_loop.err  cf_continue_outside_loop.asm  cf_continue_outside_loop.err  cf_for_chars_map.asm  cf_for_chars_map.bytes  cf_for_numeric_dec.asm  cf_for_numeric_inc.asm  cf_for_numeric_step.asm  cf_for_numeric_step.bytes  cf_if_defer.asm  cf_if_defer.bytes  cf_if_else.asm  cf_if_else.bytes  cf_if_true.asm  cf_if_true.bytes  cf_nested_break_continue.asm  cf_nested_break_continue.bytes  cf_repeat_basic.asm  cf_repeat_basic.bytes  cf_repeat_defer.asm  cf_repeat_defer.bytes  cf_while_countdown.asm  concat_values.asm  data_mix.asm  data_mix.bytes  db_basic.asm  db_basic.bytes  db_signed_wrap.asm  db_signed_wrap.bytes  db_string_single_quote.asm  db_string_single_quote.bytes  dd_endianness.asm  (+177 more)
tests/include/: inc_db.asm  inc_sq.asm
tests/stl/cases/: em64t_mov.asm  em64t_mov.bytes  em64t_mov_imm.asm  em64t_mov_imm.bytes  use_8086.asm  use_8086.bytes  use_em64t.asm  use_error.asm  use_x86.asm  use_x86.bytes
